css/home_style.css
#top-bar {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 80px;
  background-color: #785A28;
  color: white;
  display: flex;
  align-items: center;
  justify-content: space-between;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
  z-index: 1000;
  padding: 0 20px;
}

/* Navigation Bar Styling */
#top-bar nav ul {
  list-style: none;
  display: flex;
  margin: 0;
  padding: 0;
}

#top-bar nav ul li {
  margin: 0 10px;
}

#top-bar nav ul li a {
  text-decoration: none;
  color: white;
  font-weight: bold;
  padding: 8px 15px;
  border-radius: 5px;
  transition: background-color 0.3s;
  font-size: 1.2rem;
}

#top-bar nav ul li a:hover {
  background-color: #96754E; 
}

/* Current Page Title Styling */
#current-page-title {
  background-color: #B8860B;
}

body {
  margin: 0;
  padding-top: 80px;
  background-color: #060E1F;
  font-family: Arial, sans-serif;
  padding-bottom: 100px;
}

#footer {
  position: fixed; /* Sticks it to the bottom */
  bottom: 0;
  left: 0;
  width: 100%;
  background-color: #785A28; /* Matches the top bar */
  color: white;
  text-align: center;
  font-size: 14px;
  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
  z-index: 1000; /* Ensures it is above other content */
}

.row-container {
  display: flex;
  flex-direction: column;
}

.row {
    height: 50vh;
    width: 80%; 
    margin: 0 auto;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding: 20px;
    color: #fff;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    border: 1px solid #D4AF37; 
    
  }




#section1 {
  background-image: url('../images/map/summoner_back.avif');
  background-size: cover;
  background-position: center;
}

#section1 h2 {
  color: white;
  font-size: 48px;
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
  white-space: nowrap;
}

#section1 p {
  color: white;
  font-size: 30px;
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
  white-space: nowrap;
}

#name p{
  font-family: 'Cinzel', serif;  
  color: #b58c48;
  font-size: 60px;
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
}

/* Section 2 */
#section2 {
    background-image: url('../images/map/runeterra.webp');
    text-align: center;
    background-size: cover;
    background-position: center;
}

/* Title and Description */
#section2 h2 {
    color: white;
    font-size: 48px;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
    white-space: nowrap;
}

#section2 p {
    color: white;
    width: 80%;
    margin: 0 auto;
    font-size: 30px;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
    margin-bottom: 50px;
}


/* Link to the map */
.map-link {
    color: white;
    width: 80%;
    margin: 0 auto;
    font-size: 40px;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
    text-decoration: none;
}

.map-link:hover {
  color: #C28819; /* Slightly darker gold for hover effect */
}


/* section 3 */
#section3 {
    background-color: #060E1F;
    padding: 20px;
    display: flex;            /* Make the section a flex container */
    flex-direction: column;   /* Stack the items vertically */
  }
  
  #section3 h2 {
    color: white;
    font-size: 48px;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
    text-align: center;
    margin-bottom: 20px;      /* Add space below the title */
  }
  
  #section3 .flex-container {
    display: flex;
    justify-content: space-between; /* Spread the items evenly across the row */
    align-items: stretch;           /* Ensure columns stretch to fill the height */
    height: 100%;                   /* Make the flex container fill the section's height */
    gap: 20px;                     
    width: 100%;
  }
  
  #section3 .flex-item {
    background-color: #D4AF37; /* Gold background */
    color: white;
    flex: 1;                    /* Make each column take up equal space */
    display: flex;
    justify-content: center;    /* Center content horizontally */
    align-items: center;        /* Center content vertically */
    padding: 20px;
    text-align: center;
    border-radius: 8px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  }
  
  #section3 .flex-item a {
    color: white;
    text-decoration: none;
    font-size: 48px;
    font-weight: bold;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
  }
  
  #section3 .flex-item a:hover {
    color: #C28819
  }

#tft-item {
  background-image: url('../images/map/tft.png');
  background-size: cover;
  background-position: center;
}

#heros-item {
    background-image: url('../images/map/heros.webp');
    background-size: cover;
    background-position: center;
  }

#map-item {
    background-image: url('../images/map/summoner_rift.webp');
    background-size: cover;
    background-position: center;
  }

#tft-item a {
    background-color: rgba(0, 0, 0, 0.5);
    padding: 10px 15px;
    border-radius: 5px; 
    display: inline-block; 
}

#heros-item a {
  background-color: rgba(0, 0, 0, 0.5);
  padding: 10px 15px;
  border-radius: 5px; 
  display: inline-block; 
}

#map-item a {
  background-color: rgba(0, 0, 0, 0.5);
  padding: 10px 15px;
  border-radius: 5px; 
  display: inline-block;  
}

  #section4 {
    background-image: url('../images/map/arcane.webp');
    background-size: cover;
    background-position: center;
    position: relative;
  }
  
  #section4 a {
    font-size: 48px;
    color: white;
    position: absolute;
    bottom: 1%;
    right: 1%;
    text-align: center;
    text-decoration: none;
    margin-bottom: 0;
  }

  #section4 a:hover {
    color: #C28819;
  }
  

